--- a/index.html
+++ b/index.html
@@ -5,10 +5,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="ie=edge">
   <script defer src="js/vue.js"></script>
+  <script defer src="js/app.js"></script>
   <link rel="stylesheet" href="css/style.css">
   <title>Storing notes</title>
 </head>
 <body>
+<div id="app">
+
+</div>
 
 </body>
 </html>
